import { GridTile } from './grid-tile';

/** The context a tile template is instantiated with. */
export interface GridTileContext {
  $implicit: GridTile;
}
